# cookiecutter-pyml

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
tests/test_docs/: run.sh
{{cookiecutter.project_slug}}/: README.md  env.yml  pyproject.toml
